<resources>
    <string name="app_name">My Registration Form</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="your_account_details">Your Account Details</string>
</resources>